# jw-accounting_autofill

./: .gitignore  README.md  example.config.yml  pyproject.toml  run.bat  run.sh
src/: AccountReportReader.py  AccountTask.py  AccountingTool.py  AccountsPageNavigatior.py  Config.py  DesktopMailer.py  MonthCloser.py  PageNavigator.py  ProjectDonations.py  ProjectTask.py  ReportMailer.py  Template.py  Tools.py  Transaction.py  TransactionTaskInfo.py  start.py
